light/dark mode fixes and collapsible width fix

--- a/src/style/_elements.collapsible.scss
+++ b/src/style/_elements.collapsible.scss
@@ -1,6 +1,8 @@
 :root {
-  --collapsible-padding: 0.75rem;
-  --sidebar-collapsible-width: var(--sidebar-width) - 2 * var(--collapsible-padding);
+  --collapsible-padding: 0.9rem;
+  --collapsible-width: 100%;
+  --body-collapsible-width: calc(var(--collapsible-width) - 2 * var(--collapsible-padding));
+  --sidebar-collapsible-width: calc(var(--sidebar-width) - 2 * var(--collapsible-padding));
 }
 
 /* Style the button that is used to open and close the collapsible content */
@@ -8,7 +10,7 @@
   color: var(--palette-stroke);
   cursor: pointer;
   padding: var(--collapsible-padding);
-  width: 100%;
+  width: var(--collapsible-width);
   border: none;
   text-align: left;
   outline: none;
@@ -28,6 +30,9 @@
   &:hover {
     background-color: var(--palette-fill-collapsible-closed);
   }
+}
+body .collapsible {
+  width: var(--body-collapsible-width) !important;
 }
 
 .sidebar {
@@ -56,10 +61,9 @@
   }
 }
 
-
 /* Style the collapsible content. Note: hidden by default */
 .content {
-  padding: 0 0.75rem;
+  padding: 0 var(--collapsible-padding);
   display: none;
   overflow: hidden;
 	background-color: var(--palette-fill);
@@ -68,7 +72,7 @@
 
 .closecollapsibles, .opencollapsibles{
   position: fixed;
-  right: var(--floating-margin);
+  right: var(--floating-margin-lr);
   margin: 0;
   svg {
     color: var(--palette-stroke);
@@ -81,8 +85,8 @@
   }
 }
 .closecollapsibles {
-  bottom: 2.1rem;
+  bottom: calc(var(--floating-margin-tb) + 1.8em);
 }
 .opencollapsibles {
-  bottom: 3.9rem;
+  bottom: calc(var(--floating-margin-tb) + 3.6em);
 }
